[tool.poetry]
name = "miet-security"
version = "0.1.0"
description = ""
authors = ["st-a-novoseltcev <st.a.novoseltcev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
